--- a/debug/root/conf/nginx.conf
+++ b/debug/root/conf/nginx.conf
@@ -17,20 +17,26 @@ http {
   uwsgi_temp_path       /tmp;
   scgi_temp_path        /tmp;
 
-#  resolver 127.0.0.11 ipv6=off;
+#  resolver 8.8.8.8 ipv6=off;
+
 
   server {
     listen 28080;
 
+    set $addd "127.0.0.1";
+
     location / {
-      send_timeout          3000;
+      send_timeout          3;
 #      xproxy_next_upstream off;
-      xproxy_connect_timeout 3000;
-      xproxy_send_timeout    3000;
-      xproxy_read_timeout    3000;
-#      xproxy_pass http://httpbin.org/get;
-      xproxy_via socks5://172.16.1.40:1080;
-      xproxy_pass http://dfff/get;
+      xproxy_connect_timeout 3;
+      xproxy_send_timeout    3;
+      xproxy_read_timeout    3;
+      xproxy_via socks5://127.0.0.1:12050;
+#      xproxy_via socks5://127.0.0.1:13000;
+#      xproxy_pass http://$addd:80;
+#      xproxy_pass http://127.0.0.1:80;
+      xproxy_pass https://httpbin.org/get;
+#      xproxy_pass http://ya.ru/get;
     }
   }
 }
