added vars to xproxy_via

--- a/debug/root/conf/nginx.conf
+++ b/debug/root/conf/nginx.conf
@@ -23,7 +23,7 @@ http {
   server {
     listen 28080;
 
-    set $addd "127.0.0.1";
+    set $addr "127.0.0.1";
 
     location / {
       send_timeout          3;
@@ -31,9 +31,9 @@ http {
       xproxy_connect_timeout 3;
       xproxy_send_timeout    3;
       xproxy_read_timeout    3;
-      xproxy_via socks5://127.0.0.1:12050;
-#      xproxy_via socks5://127.0.0.1:13000;
-#      xproxy_pass http://$addd:80;
+#      xproxy_via socks5://127.0.0.1:12050;
+      xproxy_via socks5://$addr:12050;
+#      xproxy_pass http://$addr:80;
 #      xproxy_pass http://127.0.0.1:80;
       xproxy_pass https://httpbin.org/get;
 #      xproxy_pass http://ya.ru/get;
