--- a/debug/root/conf/nginx.conf
+++ b/debug/root/conf/nginx.conf
@@ -31,8 +31,8 @@ http {
       xproxy_connect_timeout 3;
       xproxy_send_timeout    3;
       xproxy_read_timeout    3;
-#      xproxy_via socks5://127.0.0.1:12050;
-      xproxy_via socks5://$addr:12050;
+#      xproxy_socks socks5://127.0.0.1:12050;
+      xproxy_socks socks5://$addr:12050;
 #      xproxy_pass http://$addr:80;
 #      xproxy_pass http://127.0.0.1:80;
       xproxy_pass https://httpbin.org/get;
